# Speech-to-Medical-Documents

./: .gitignore  README.md  doc_analysis.py  doctor_notes.txt  output - Shortcut.lnk  setup.py  speech_rec.py  xxx.sh
audio/: audio_rec.py  audio_rec_v1.py  doctor_notes.txt  speech_rec.py  speech_rec_v2.py
cpp_libs/: CMakeLists.txt
cpp_libs/include/: img_libs.hpp
cpp_libs/python/: CmakeLists.txt  pyimg.cpp
cpp_libs/src/: img_libs.cpp
data/: Biorelate - Developer In Test.docx  euro-med-353820-86d6bbeb25fd.json  form8.doc  wordlist.txt
output/: doctor_notes.txt  form.csv  form.hocr  form.xlsx
utils/: doc_analysis.py  extract_lines.py  extractor.cpp  extractor.py  extractor.pyx  extractor_nu.py  extractor_old.pyx  extractor_py.py  image_functions.py  pdf2img.py  utils_pdf.py  write_pdf.py  write_pdf_old.py
